# Hydro-Power-Cost-Prediction

./: README.md  pyproject.toml
config/: config.yaml
src/hydro_cost/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  plots.py  predict.py  train.py  utils.py
tests/: test_pipeline_smoke.py
